[gd_scene load_steps=5 format=3 uid="uid://ddoupojq6yvc1"]

[ext_resource type="PackedScene" uid="uid://crkad748v1vu6" path="res://stick.tscn" id="1_10bgb"]
[ext_resource type="Script" path="res://stickgame.gd" id="1_xxrth"]
[ext_resource type="PackedScene" uid="uid://cjo16cf31h2cl" path="res://boundary.tscn" id="2_bcllc"]
[ext_resource type="PackedScene" uid="uid://yp5cnquu6xau" path="res://WinArea.tscn" id="4_u2o4a"]

[node name="Stickgame" type="Node2D"]
script = ExtResource("1_xxrth")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="Control"]
modulate = Color(0.509804, 0.423529, 0.117647, 1)
layout_mode = 0
offset_left = -71.0
offset_top = -89.0
offset_right = 1266.0
offset_bottom = 820.0

[node name="WinArea" parent="." instance=ExtResource("4_u2o4a")]
position = Vector2(605, 245)

[node name="Stick" parent="." instance=ExtResource("1_10bgb")]
unique_name_in_owner = true
position = Vector2(599, 597)
collision_layer = 128
collision_mask = 129

[node name="Boundary" parent="." instance=ExtResource("2_bcllc")]
position = Vector2(602, 412)

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.541176)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.5
offset_top = -49.0
offset_right = 111.5
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 81
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="WinScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.541176)

[node name="Label" type="Label" parent="WinScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.5
offset_top = -49.0
offset_right = 111.5
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 81
text = "You Win!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 3.0
offset_top = 589.0
offset_right = 330.0
offset_bottom = 646.0
max_value = 5.0
step = 1.0
value = 5.0

[connection signal="body_entered" from="WinArea" to="Stick" method="_on_win_area_body_entered"]
[connection signal="health_depleted" from="Stick" to="." method="_on_stick_health_depleted"]
[connection signal="win_zone" from="Stick" to="." method="_on_stick_win_zone"]
